bilbo spacing fix

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
   }
   .centered-image {
     display: block;
-    margin: 3px auto; /* centers the image */
+    margin: 5px auto 0 auto; /* centers the image */
     max-width: 80%;   /* keeps it responsive */
     height: auto;
     border-radius: 12px; /* optional: rounded corners */
